# franzsi

./: README.md
first_period/exam_corrections/Exercise_2/: CMakeLists.txt  Data.cpp  Data.h  cities.csv  exercise.txt  main.cpp
first_period/exam_corrections/Exercise_3/: CMakeLists.txt  book.cpp  book.h  book_shelf.cpp  book_shelf.h  hard_cover_book.cpp  hard_cover_book.h  main.cpp  soft_cover_book.cpp  soft_cover_book.h
first_period/week03/3W2/: 02_Post-it.rar
first_period/week04/4W2/: CMakeLists.txt  Mentor.h  Person.cpp  Person.h  Student.cpp  main.cpp
first_period/week04/Class_Practice_Johny__ATM/: ATM.cpp  ATM.h  CMakeLists.txt  Card.cpp  Card.h  main.cpp
first_period/week04/Class_Practice_Tomi/: CMakeLists.txt  main.cpp
first_period/week04/Class_Practice_Trial_Exam_Pirate/: CMakeLists.txt  main.cpp
second_period/week06/01_Hello_Me/: CMakeLists.txt
second_period/week06/02_Hello_Others/: CMakeLists.txt  main.cpp
second_period/week06/03_Introduce_Yourself/: CMakeLists.txt  main.c
second_period/week06/04_Two_Numbers/: CMakeLists.txt
second_period/week07/7W1/01_Dojo/Dojo_Test/: CMakeLists.txt  Dojo_Test.cpp
third_period/Bubble_Sort_Practise/: sorting.cpp
third_period/OpenCV_Team2/Image_Loading/: CMakeLists.txt  README.md  main.cpp
third_period/OpenCV_Workshop_01/: CMakeLists.txt  main.cpp
third_period/OpenCV_Workshop_02_Image_Operations_Greyscale/: CMakeLists.txt  main.cpp
third_period/SQL_Practice/: CMakeLists.txt
week01/1W3/02_Humpty-Dumpty/: CMakeLists.txt  main.cpp
week01/1W3/04_Introduce_Yourself/: main.cpp
(+211 files in other folders)
